fix: fix the layout of the sortable table and results

--- a/application/CohortManager/src/Web/app/globals.scss
+++ b/application/CohortManager/src/Web/app/globals.scss
@@ -48,3 +48,15 @@
   margin-bottom: 0;
   margin-left: 8px;
 }
+
+// Sortable table layout
+
+.app-form-results-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.app-results-text {
+  margin: 0;
+}
