feat: Error handling

--- a/application/CohortManager/src/Web/app/globals.scss
+++ b/application/CohortManager/src/Web/app/globals.scss
@@ -300,3 +300,17 @@
     border-color: #004080;
   }
 }
+
+.search-input-container {
+  position: relative;
+  flex: 1;
+}
+
+.search-error-message {
+  display: none;
+  margin-top: 4px;
+
+  &.visible {
+    display: block;
+  }
+}
