feat: Add NHS number search functionality for exceptions and reports (#1777)
* feat: feedback component and scss

* feat: renamed component to UserFeedback and added components to required pages

* chore: renamed imports from feedback to UserFeedback

* feat: unused css removed

* feat: input added to UI

* feat: search page

* feat: search moved out of header to own component

* feat: search function

* feat: fetch updated with fetchExceptionsByNhsNumber endpoint

* feat: ValidationExceptionsByNhsNumberResponse

* feat: GetValidationExceptionsByNhsNumber function added

* feat: added showing item numbers

* feat: Header tidy and search button added

* feat: pagination fixed, reports added, page count made dynamic, response object refactored

* feat: added missing feedback component from report details page

* feat: generate report logic

* feat: refactor service methods, and calling function, move paginationResult DTO, front end structure change

* feat: Error handling

* feat: no results card

* refactor: readonly props, refactor

* feat: No Result page added, Conditional display added to input Search in header

* feat: error handling and redirect

* chore: placeholder typo

* fix: updated test references

* feat: update tests and remove duplicate styling

* chore: sonarQube Issues

* feat: used standard component, updated scss

* feat: server side rendering on conditionalHeaderSearch Component

* chore: Sonaqube img fix

* chore: styling

* feat: code tidy and refactor,

* refactor: GetExceptionsWithReportsByNhsNumber refactor, controller reworked

* refactor: abstract methods

* test: unit tests added

* chore: encodeURIComponent

* fix: removed wrong ExceptionCategory

* fix: type needed for all

* fix: NhsNumber logging removed

* refactor: addressing PR comments, removed logging, changed return type, refactor response object

* fix: mapping

* fix: ISO string causing incorrect date to be parsed for some records

--- a/application/CohortManager/src/Web/app/globals.scss
+++ b/application/CohortManager/src/Web/app/globals.scss
@@ -162,3 +162,32 @@
   color: #00703c;
 }
 
+.nhsuk-header__content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+}
+
+.nhsuk-header__service {
+  white-space: nowrap;
+  flex-shrink: 0;
+}
+
+.nhsuk-header__search {
+  flex: 1;
+  min-width: 250px;
+}
+
+.nhsuk-header .nhsuk-header__search {
+  margin: 0 100px;
+}
+
+.nhsuk-header__search-form {
+  display: flex;
+  fill: currentColor;
+}
+
+.nhsuk-header__account {
+  flex-shrink: 0;
+}
