--- a/application/CohortManager/src/Web/app/globals.scss
+++ b/application/CohortManager/src/Web/app/globals.scss
@@ -179,6 +179,10 @@
   min-width: 250px;
 }
 
+.nhsuk-summary-list__multiline {
+    white-space: pre-wrap;
+}
+
 .nhsuk-header .nhsuk-header__search {
   margin: 0 100px;
 }
