feat: update UI rule descriptions (#1790)
* update rule descriptions

* css Change for multi line more details

--- a/application/CohortManager/src/Web/app/globals.scss
+++ b/application/CohortManager/src/Web/app/globals.scss
@@ -181,6 +181,9 @@
   max-width: 420px;
 }
 
+.nhsuk-summary-list__multiline {
+    white-space: pre-wrap;
+}
 .nhsuk-header__search-form {
   display: flex;
 }
