feat: references, jsx change

--- a/application/CohortManager/src/Web/app/globals.scss
+++ b/application/CohortManager/src/Web/app/globals.scss
@@ -1,4 +1,4 @@
-@use "~nhsuk-frontend/packages/nhsuk";
+@import "nhsuk-frontend/dist/nhsuk/nhsuk-frontend.min.css";
 // Utilities
 .app-u-no-wrap {
   white-space: nowrap;
